Fix responsiveness issues on mobile
Fixed image margin clipping on mobile devices

--- a/Personal/css/style.css
+++ b/Personal/css/style.css
@@ -153,7 +153,7 @@ footer p {
     display: inline-block;
     *display: inline;
     zoom: 1;
-    
+    line-height: 125%;
 }
 
 #position {
@@ -162,6 +162,7 @@ footer p {
     *display: inline;
     zoom: 1;
     margin-left: 20px;
+    line-height: 125%;
 }
 
 #engagements a {
@@ -229,17 +230,13 @@ footer p {
         font-size: 75%;
     }
     
-    li {
-        padding: 8px;
-    }
-    
     #profilepic {
-        margin: 10px 10px 0px 10px;
+        margin: 25px 10px 0px 10px;
     }
 }
 
 /*Mobile S*/
-@media screen and (max-width: 460px){
+@media screen and (max-width: 480px){
     h1 {
         font-size: 200%;
     }
@@ -247,15 +244,11 @@ footer p {
         font-size: 100%;
     }
 
-    li {
-        display: block;
-    }
-
     #position {
         display: none;
     }
     
     #profilepic {
-        margin: 10px 10px 10px 10px;
+        margin: 100px 10px 10px 10px;
     }
 }
